@@ -1928,6 +1928,7 @@ int NVoice::deleteActualElem(int *state, int *state2, bool backspace) {
 	QList<NNote> *partlist;
 	NChord *chord;
 	bool removedLast = false; /* are we deleting the last element? */
+	bool removedFirst = false; /* are we deleting the first element? */
 	*state2 = *state = 0;
 	if (!currentElement_) return -1;
 	if (musElementList_.isEmpty()) {
@@ -1949,6 +1950,7 @@ int NVoice::deleteActualElem(int *state, int *state2, bool backspace) {
 			NResource::abort("deleteActualElem: internal error", 1);
 		}
 		removedLast = (musElementList_.current() == musElementList_.getLast());
+		removedFirst = (musElementList_.current() == musElementList_.getFirst());
 		musElementList_.remove();
 		partlist = chord->getNoteList();
 		for (note = partlist->first(); note; note = partlist->next()) {
@@ -1965,6 +1967,7 @@ int NVoice::deleteActualElem(int *state, int *state2, bool backspace) {
 			NResource::abort("deleteActualElem: internal error", 2);
 		}
 		removedLast = (musElementList_.current() == musElementList_.getLast());
+		removedFirst = (musElementList_.current() == musElementList_.getFirst());
 		musElementList_.remove();
 	}
 	currentElement_ = musElementList_.current();
@@ -1985,11 +1988,12 @@ int NVoice::deleteActualElem(int *state, int *state2, bool backspace) {
 		}
 		*state2 = currentElement_->status2_;
 		
-		if ( backspace || (!removedLast) ) {
+		 /* if the last element was deleted by Key_Delete or the first element was deleted by Key_Backspace, none get selected */
+		if ( (backspace && (!removedFirst)) || (!backspace && (!removedLast)) ) {
 			currentElement_->setActual(true);
 			return currentElement_->getSubType();
-		} else {
-			currentElement_ = 0; /* the last element was deleted by KE_del, none get selected */
+		} else  {
+			currentElement_ = 0;
 			return 0; /* 0 is returned as we didn't encounter an error, but actually isn't any element selected */
 		}
 	}
