@@ -11,3 +11,4 @@ version 2.9.0:
     * Prevent NoteEdit from crashing when calling New document when playing. R297
 	* MusicXML import - fill with hidden rests in second staff as well. R299
 	* Selection button and note buttons splitted. First step towards separate Insert/Edit/Selection modes. R300
+	* Don't select the next element when using Backspace to delete and the beginning of the score is reached. R301
